[tool.poetry]
name = "secondstodate"
version = "0.1.0"
description = "A small python app that calculates the seconds from now to a specified date and time"
authors = ["Pierre Le Roux <leroux.pierre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PySide6 = "^6.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
